# mcw

./: Cargo.toml  LICENCE  PRESETS.md  README.crates.md  README.md  TODO.md  tekst.txt
lib_src/: lib.rs
src/: lib.rs  main.rs
