[package]
name = "mcw"
version = "1.3.0"
edition = "2021"
licence = "MIT"
author = ["MateusDev <matissossGameDev@proton.me>"]
description = "mcw - most common word"

[lib]
name = "mcw"
path = "lib_src/lib.rs"

[[bin]]
name = "mcw-cli"
path = "src/main.rs"

[dependencies]
colored =   { version = "2.1.0", optional = true}
serde   =   { version = "1.0.215", features = ["derive"], optional = true}
tokio   =   { version = "1.41.1", features = ["full"], optional = true}
toml    =   { version = "0.8.19", optional = true}

[features]
default = []
async = ["tokio"]
cli = ["colored", "serde", "tokio", "toml"]
