[package]
name = "tan"
version = "2.0.0"
edition = "2021"
license-file = "MIT"
author = ["MateusDev <matissossGameDev@proton.me>"]
description = "tan - text analysis"
readme = "README.crates.md"

[lib]
name = "tan"
path = "src/lib.rs"

[[bin]]
name = "tan"
path = "src/main.rs"

[dependencies]

[features]
default = []
