[package]
name = "mcw"
version = "2.0.0"
edition = "2021"
license = "MIT"
author = ["MateusDev <matissossGameDev@proton.me>"]
description = "mcw/tan - text analysis"
readme = "README.crates.md"

[lib]
name = "tan"
path = "src/lib.rs"

[[bin]]
name = "tan"
path = "src/main.rs"

[dependencies]

[features]
default = []
